# Text-Unifier

./: .gitignore  README.md  Text Unifier.code-workspace  electron-builder.yml  index.html  package-lock.json  package.json  tsconfig.electron.json
archive/: README.md  old-docs
archive/docs_v3.0_v3.1/: Bug修复说明_V3.2.1.md  PRD_V3.0_交互原型.md  PRD_V3.1_交互原型.md  代码变更记录_V3.1.1.md  代码变更记录_V3.1.2.md  数据库设计文档_V3.0.md  数据库设计文档_V3.1.md  系统架构设计文档_V3.0.md  系统架构设计文档_V3.1.md  自审代码报告_V3.1.1.md  自审代码报告_V3.1.2.md  自审代码报告_V3.1.md  迁移方案_V3.0_Electron.md
docs/: Bug修复说明_V3.2.2.md  PRD_V3.0_产品需求文档.md  PRD_V3.1_产品需求文档.md  代码变更记录_V3.0.md  代码变更记录_V3.1.md  代码变更记录_V3.2.3.md  修复方案_BUG-031_多文件滚动.md  接口规范文档_V3.0.md  接口规范文档_V3.1.md  接口规范文档_V3.2.md  自审代码报告_V3.0.md  自审代码报告_V3.2.1.md  自审代码报告_V3.2.md
electron/: main.ts  preload.d.ts  preload.ts
native/: Cargo.toml
native/src/: document_formatter.rs  duplicate_resolver.rs  file_processor.rs  lib.rs  paragraph_index.rs  text_normalizer.rs
releases/: README.md
releases/v3.0/: README.md
releases/v3.1/: README.md
releases/v3.1.1/: README.md  版本更新记录.md
releases/v3.1.2/: README.md
releases/v3.2/: README.md
releases/v3.2.1/: README.md  版本更新记录.md
releases/v3.2.3/: README.md
scripts/: build-git-history.ps1  debug-asar.cjs  rebuild-git-history.ps1  rename-electron-output.cjs  update-asar.cjs  启动开发环境.ps1
src/: App.tsx  index.css
src/components/: ChapterPanel.tsx  CleanPanel.tsx  DiffViewer.tsx  DragOverlay.tsx  DuplicateItem.tsx  DuplicateList.tsx  ExportButton.tsx  FileChipBar.tsx  (+13 more)
test_data/: README.md  run_test_and_merge.py
(+124 files in other folders)
