[package]
name = "text-unifier-core"
version = "3.2.2"
description = "Text Unifier 核心引擎 — napi-rs 原生模块"
authors = ["Text Unifier Team"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi4", "async"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
indexmap = "2"
regex = "1.10"
rayon = "1.10"
encoding_rs = "0.8"
anyhow = "1"

[build-dependencies]
napi-build = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
